--- a/templates/app/android/app/build.gradle
+++ b/templates/app/android/app/build.gradle
@@ -6,9 +6,9 @@ plugins {
 }
 
 android {
-    namespace = "com.example.app"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = "25.1.8937393"
+    namespace "com.example.app"
+    compileSdkVersion flutter.compileSdkVersion
+    ndkVersion "25.1.8937393"
 
  compileOptions {
   sourceCompatibility JavaVersion.VERSION_17
@@ -21,7 +21,7 @@ kotlinOptions {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.app"
+        applicationId "com.example.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
