--- a/templates/app/android/app/src/main/AndroidManifest.xml
+++ b/templates/app/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,18 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+              <!-- Deep linking -->
+<meta-data android:name="flutter_deeplinking_enabled" android:value="true" />
+<intent-filter android:autoVerify="true">
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.DEFAULT" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <!-- Replace these with your app's scheme and host -->
+    <data android:scheme="glue" android:host="example.com" />
+    <!-- Optional: Support http and https schemes -->
+    <data android:scheme="http" />
+    <data android:scheme="https" />
+</intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
